# buff_decetor

./: CMakeLists.txt  README.md
config/: detector.yaml  solve.yaml  tracker.yaml
include/: config.hpp  detector.hpp  pnp_solver.hpp  tracker.hpp  types.hpp  utils.hpp
src/: config.cpp  detector.cpp  main.cpp  pnp_solver.cpp  tracker.cpp  utils.cpp
